[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9.0"
winit = { version = "0.29.8"}
ash = { version = "0.37.3+1.3.251", features = ["linked"]}
winapi = "0.3.9"
num = "0.4.1"
cgmath = "0.18.0"
image = "0.24.8"
tobj = "4.0.1"